apps/chains/ethereum/service-p2p.yaml
apiVersion: v1
kind: Service
metadata:
  name: ethereum-p2p
  namespace: ethereum
  labels:
    app.kubernetes.io/name: ethereum
    app.kubernetes.io/component: p2p
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: ethereum
  ports:
    - name: p2p-tcp
      port: 30303
      targetPort: p2p-tcp
      protocol: TCP
    - name: p2p-udp
      port: 30303
      targetPort: p2p-udp
      protocol: UDP
